# vmos-edge

./: .gitignore
cbs/: cbs_config.json
src/: CMakeLists.txt  language_ar.ts  language_en.ts  language_es.ts  language_fil.ts  language_fr.ts  language_id.ts  language_ja.ts  language_km.ts  language_ko.ts  language_ms.ts  language_pt.ts  language_ru.ts  language_th.ts  language_uk.ts  language_ur.ts  language_vi.ts  language_zh-hant.ts  language_zh.ts  resources.qrc  vmosedge.rc  vmosedge.rc.in
src/qml/: AppConfig.qml  BatchInstallPopup.qml  CloneCloudPhonePopup.qml  CloudListView.qml  CreateCloudPhonePopup.qml  DeviceDetailPopup.qml  GridTileLayout.qml  ImageListView.qml  MainWindow.qml  OneKeyNewDevicePopup.qml  PadWindow.qml  ProxySettingsPopup.qml  TemplateListView.qml  TimeZoneCloudPhonePopup.qml  UpgradeCloudPhonePopup.qml
src/src/: main.cpp  proxytester.cpp  selectedlistmodel.cpp  selectedlistmodel.h  structs.h  treemodel.cpp  treeproxymodel.cpp  treeproxymodel.h
src/src/helper/: DeviceScanner.cpp  DeviceScanner.h  TemplateModel.cpp  TemplateModel.h  utils.cpp  utils.h
src/src/scrcpy_wrapper/: devicemanager.cpp  devicemanager.h  grid_observer.cpp  grid_observer.h  groupcontroller.h  scrcpy_controller.cpp  scrcpy_controller.h  scrcpy_observer.cpp
src/src/sdk_wrapper/: video_render_item_ex.cpp  video_render_item_ex.h
